--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,13 @@
     <string name="english">English</string>
     <string name="change_language">Change Language</string>
     <string name="movie_title_sample">Judul Movie Populer</string>
+    <string name="review">Review</string>
+    <string name="genre">GENRE</string>
+    <string name="overview">OVERVIEW</string>
+    <string name="cast_desc_sample">Desc Sample 3</string>
+    <string name="crew3_desc_sample">Crew Desc Sample 3</string>
+    <string name="crew3_sample">Desc Sample 3</string>
+    <string name="crew2_desc_sample">Desc Sample 3</string>
+    <string name="user_score">8.0</string>
+    <string name="poster_text_sample">poster_text_sample</string>
 </resources>
