--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,6 @@
     <string name="crew3_desc_sample">Crew Desc Sample 3</string>
     <string name="crew3_sample">Desc Sample 3</string>
     <string name="crew2_desc_sample">Desc Sample 3</string>
-    <string name="user_score">8.0</string>
+    <string name="user_score">User score</string>
     <string name="poster_text_sample">poster_text_sample</string>
 </resources>
