--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,8 @@
     <string name="change_language">Change Language</string>
     <string name="movie_title_sample">Judul Movie Populer</string>
     <string name="review">Review</string>
-    <string name="genre">GENRE</string>
-    <string name="overview">OVERVIEW</string>
+    <string name="genre">Genre</string>
+    <string name="overview">Overview</string>
     <string name="cast_desc_sample">Desc Sample 3</string>
     <string name="crew3_desc_sample">Crew Desc Sample 3</string>
     <string name="crew3_sample">Desc Sample 3</string>
