--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -20,4 +20,5 @@
     <string name="user_score">Skor</string>
     <string name="poster_text_sample">poster_text_sample</string>
     <string name="crew3_sample">Desc Sample 3</string>
+    <string name="choice">Kamu memilih:</string>
 </resources>
