--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -21,4 +21,5 @@
     <string name="poster_text_sample">poster_text_sample</string>
     <string name="crew3_sample">Desc Sample 3</string>
     <string name="choice">Kamu memilih:</string>
+    <string name="error_info">Info error</string>
 </resources>
