--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">MyMovieCatalogueAPI</string>
     <string name="tab_text_1">Movies</string>
     <string name="tab_text_2">TV Shows</string>
-
+    <string name="error_info">Error Info</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="locale_setting">Locale Setting</string>
